--- a/Agile.Windows/Main.xaml
+++ b/Agile.Windows/Main.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="Agile.Windows.Main"
+﻿<Window x:Class="Agile.Windows.Main"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:m="clr-namespace:Signum.Windows;assembly=Signum.Windows"
@@ -45,14 +45,6 @@
                 <MenuItem Header="Reporting">
                     <MenuItem Tag="{m:Explore QueryName={x:Type sec:UserChartEntity}}"/>
                     <MenuItem Tag="{m:Explore QueryName={x:Type seu:UserQueryEntity}}"/>
-                </MenuItem>
-                <MenuItem Header="Disconnected" x:Name="miDisconnected">
-                    <MenuItem Tag="{m:Explore QueryName={x:Type sed:DisconnectedMachineEntity}}"/>
-                    <MenuItem Tag="{m:Explore QueryName={x:Type sed:DisconnectedExportEntity}}"/>
-                    <MenuItem Tag="{m:Explore QueryName={x:Type sed:DisconnectedImportEntity}}"/>
-                    <Separator/>
-                    <MenuItem Header="Download and work localy" Click="miDownload_Click" x:Name="miDownload" />
-                    <MenuItem Header="Upload and work online" Click="miUpload_Click" x:Name="miUpload" />
                 </MenuItem>
             </Menu>
         </DockPanel>
