--- a/Agile.Web/Views/Shared/_Layout.cshtml
+++ b/Agile.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-@using Agile.Web
+﻿@using Agile.Web
 @using Agile.Web.Controllers
 @using Signum.Entities.Authorization
 @using Signum.Web.Auth
@@ -144,22 +144,6 @@
                 })
                             }
                         </li>
-
-                        <li class="language-selector-container">
-                            @{  
-                              
-                
-                                @Html.DropDownList(
-                "languageSelector",
-                Signum.Engine.Basics.CultureInfoLogic.CultureInfoDNToCultureInfo.Value.Values
-                .Select(s => new SelectListItem { Text = s.DisplayName, Value = s.Name, Selected = s.Name == Culture }),
-                new Dictionary<string, object> { 
-                    {"data-url", Url.Action<HomeController>(hc => hc.ChangeLanguage()) }, 
-                    {"class", "form-control theme-selector" }   
-                })
-                            }
-                        </li>
-
                         <li>
                             @{ Html.RenderPartial(AuthClient.LoginUserControlView);}
                         </li>
