--- a/Agile.Web/Views/Home/Index.cshtml
+++ b/Agile.Web/Views/Home/Index.cshtml
@@ -6,16 +6,94 @@
 }
 
 <br />
-<div class="jumbotron">
-    <h1>Welcome to Signum Framework!</h1>
+<div class="jumbotron" style="text-align: center;">
+    <h1>Agile Manifesto</h1>
     <br />
-    <p>Agile is a demo application from <a href="http://www.signumsoftware.com" title="Signum Framework">Signum Software</a> based on Northwind database from Microsoft</p>
-    <p>
-        To learn more about Signum Framework visit <a href="http://www.signumframework.com" title="Signum Framework">http://www.signumframework.com</a>.
-    </p>
-    <p>
-        You will also need to know <a href="http://asp.net/mvc">ASP.NET MVC</a>, <a href="http://jquery.com/" title="Bootstrap">jQuery</a>, <a href="http://getbootstrap.com/" title="Bootstrap">Bootstrap</a> and <a href="http://www.typescriptlang.org/" title="Bootstrap">Typescript</a>.
-    </p>
+    <p><strong>Individuals and interactions</strong>  over processes and tools</p>
+    <p><strong> Working software</strong>  over comprehensive documentation</p>
+    <p><strong>Customer collaboration</strong> over contract negotiation</p>
+    <p><strong>Responding to change</strong> over following a plan</p>
+</div>
+
+<div class="row">
+    <div class="col-sm-4">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Our highest priority is to satisfy the customer
+                through early and continuous delivery
+                of valuable software.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Welcome changing requirements, even late in
+                development. Agile processes harness change for
+                the customer's competitive advantage.
+            </div>
+        </div><div class="panel panel-default">
+            <div class="panel-body">
+                Deliver working software frequently, from a
+                couple of weeks to a couple of months, with a
+                preference to the shorter timescale.
+            </div>
+        </div><div class="panel panel-default">
+            <div class="panel-body">
+                Business people and developers must work
+                together daily throughout the project.
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Build projects around motivated individuals.
+                Give them the environment and support they need,
+                and trust them to get the job done.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                The most efficient and effective method of
+                conveying information to and within a development
+                team is face-to-face conversation.
+            </div>
+        </div><div class="panel panel-default">
+            <div class="panel-body">
+                Working software is the primary measure of progress.
+            </div>
+        </div><div class="panel panel-default">
+            <div class="panel-body">
+                Agile processes promote sustainable development.
+                The sponsors, developers, and users should be able
+                to maintain a constant pace indefinitely.
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Continuous attention to technical excellence
+                and good design enhances agility.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                Simplicity--the art of maximizing the amount
+                of work not done--is essential.
+            </div>
+        </div><div class="panel panel-default">
+            <div class="panel-body">
+                The best architectures, requirements, and designs
+                emerge from self-organizing teams.
+            </div>
+        </div><div class="panel panel-default">
+            <div class="panel-body">
+                At regular intervals, the team reflects on how
+                to become more effective, then tunes and adjusts
+                its behavior accordingly.
+            </div>
+        </div>
+    </div>
 </div>
 
 
