--- a/Agile.Web/Views/Board/List.cshtml
+++ b/Agile.Web/Views/Board/List.cshtml
@@ -2,18 +2,20 @@
 @using Agile.Web.Board
 @model ListInfo
 
-<div class="list" data-card="@Model.Lite.Key()">
+<div class="list" data-list="@Model.Lite.Key()">
     <h4><a href="@Navigator.NavigateRoute(Model.Lite)">@Model.Name</a></h4>
     <div class="list-cards">
+        <div class="card-separator" ></div>
         @foreach (var c in Model.Cards)
         {
             @Html.Partial(BoardClient.ViewClientPrefix.FormatWith("Card"), c)
+            <div class="card-separator" ></div>
         }
     </div>
 
     <div class="list-create-card-block" style="display:none">
         <textarea></textarea>
-        <br/>
+        <br />
         <a class="btn btn-success list-create-card-button">@Agile.Entities.CardMessage.Create.NiceToString()</a>
         <a type="button" class="btn btn-default list-create-card-cancel">
             <span class="glyphicon glyphicon-remove"></span>
