--- a/Agile.Web/Content/board.css
+++ b/Agile.Web/Content/board.css
@@ -5,13 +5,16 @@
     display: flex;
 }
 
+.board-list-container {
+    min-width: 270px;
+}
+
 .list {
     padding: 5px 5px;
     background: #e2e4e6;
     border-radius: 3px;
     box-sizing: border-box;
     margin: 0 5px;
-    min-width: 270px;
     max-height: 100%;
 }
 
@@ -41,7 +44,6 @@
     width: 100%;
     border: 0px;
     border-radius: 5px;
-    margin-top: 5px;
     resize: none;
 }
 
@@ -56,8 +58,20 @@
     position: relative;
     z-index: 0;
     padding: 5px;
-    margin-top: 5px;
 }
+
+.card-separator {
+    height: 10px;
+}
+
+.board-dragging .card-separator:not(.avoid-dragging) {
+    background-color: #ccc;
+}
+
+.board-dragging .card-separator:not(.avoid-dragging).card-over {
+    background-color: #888;
+}
+
 
 .card-icons {
     list-style: none;
@@ -78,15 +92,15 @@
     padding: 0px;
 }
 
-    .card-tag {
-        float: left;
-        height: 8px;
-        width: 30px;
-        border-radius: 4px;
-        margin-right: 4px;
-    }
+.card-tag {
+    float: left;
+    height: 8px;
+    width: 30px;
+    border-radius: 4px;
+    margin-right: 4px;
+}
 
 .card-image img {
-  width: 100%;
-  margin-bottom: 5px;
+    width: 100%;
+    margin-bottom: 5px;
 }
