--- a/Agile.Web/Views/Board/Board.cshtml
+++ b/Agile.Web/Views/Board/Board.cshtml
@@ -1,21 +1,6 @@
-﻿@using Agile.Logic
-@using Agile.Web.Board
-@model BoardInfo
+﻿@using Agile.Web.Board
+@model Agile.Logic.BoardInfo
 @Html.AntiForgeryToken()
 @Html.ScriptCss("~/Content/board.css")
 
-<div class="board" data-card="@Model.Lite.Key()">
-    <h2><a href="@Navigator.NavigateRoute(Model.Lite)">@Model.Name</a></h2>
-    <div class="board-lists">
-        @foreach (var l in Model.List)
-        {
-            @Html.Partial(BoardClient.ViewClientPrefix.FormatWith("List"), l)
-        }
-    </div>
-</div>
-
-<script>
-    @BoardClient.BoardModule["init"]()
-    @BoardClient.BoardModule["initList"]()
-    @BoardClient.BoardModule["initCard"]()
-</script>
+@Html.Partial(BoardClient.ViewClientPrefix.FormatWith("BoardPartial"))
