--- a/Agile.Web/Views/Admin/Card/CardHistory.cshtml
+++ b/Agile.Web/Views/Admin/Card/CardHistory.cshtml
@@ -57,7 +57,7 @@
                     if (ai.Type == AttachmentType.Image)
                     {
                         <a href="@Url.Content(ai.File.FullWebPath)">
-                            <img src="@Url.Content(ai.File.FullWebPath)" />
+                            <img src="@Url.Content(ai.File.FullWebPath)" style="width:100%"/>
                         </a>
                     }
                     else
